# autotui

./: .flake8  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
autotui/: fileio.py  namedtuple_prompt.py  options.py  pick.py  prompts.py  serialize.py  shortcuts.py  typehelpers.py
benchmark/: run.py
examples/: optionals_and_lists.py  prompt_with_editor.py
tests/: test_autotui.py
