[project]
name = "autotui"
version = "0.4.7"
description = "\"quickly create UIs to interactively prompt, validate, and persist python objects to disk (JSON/YAML) and back using type hints\""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["data", "prompt", "namedtuple"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "PyYAML>=6.0",
  "click>=8.0",
  "dateparser>=1.1.0",
  "prompt-toolkit>=3.0",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/purarue/autotui"

[project.optional-dependencies]
edit = ["click"]
json = ["orjson"]
optional = ["click", "orjson", "pyfzf-iter"]
pick = ["pyfzf-iter"]
testing = ["flake8", "mypy", "pytest"]

[tool.mypy]
pretty = "True"
disallow_any_generics = "False"
show_error_context = "True"
show_error_codes = "True"
namespace_packages = "True"
disallow_subclassing_any = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.pytest.ini_options]
addopts = "--doctest-modules autotui"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["autotui"]
exclude = ["tests*"]
